--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -12,6 +12,9 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: latest
+          cache: 'pnpm'
 
       - name: Set node version to 20
         uses: actions/setup-node@v2
