--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "@types/blueimp-md5": "^2.18.2",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
-    "mermaid": "10.5.0",
+    "@types/blueimp-md5": "^2.18.2",
     "fast-glob": "^3.3.2",
+    "mermaid": "10.5.0",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
@@ -32,7 +32,8 @@
     "blueimp-md5": "^2.19.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "three": "^0.159.0"
   },
   "pnpm": {
     "overrides": {
