--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.2",
     "blueimp-md5": "^2.19.0",
     "dayjs": "^1.11.10",
+    "gitalk": "^1.8.0",
     "gray-matter": "^4.0.3",
     "http-proxy-middleware": "^2.0.6",
     "sass": "^1.69.5",
