--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -26,6 +26,5 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ secrets.RELEASE_TOKEN }}'
           MERGE_LABELS: ''
-          # 只要是 kailong321200875 用户，都进行合并
-          MERGE_FILTER_AUTHOR: 'kailong321200875'
+          MERGE_FILTER_AUTHOR: 'mafqla'
 
