chore(master): release 0.1.0-alpha

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-end-notes",
-  "version": "1.0.0",
+  "version": "0.1.0-alpha",
   "main": "index.js",
   "author": "fql",
   "license": "MIT",
