--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/blueimp-md5": "^2.18.2",
     "fast-glob": "^3.3.2",
     "mermaid": "10.5.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
