--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "source": "/douyin/(.*)",
       "destination": "/api/proxy"
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "gh-pages": false
+    }
+  }
 }
